--- a/LightLocker/app/build.gradle
+++ b/LightLocker/app/build.gradle
@@ -1,15 +1,17 @@
+apply from: '../ext.gradle'
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion project.properties.compileSdkVersion
+    buildToolsVersion project.properties.buildToolsVersion
 
     defaultConfig {
         applicationId "com.dhair.lightlocker"
-        minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion project.properties.minSdkVersion
+        targetSdkVersion project.properties.targetSdkVersion
+        versionCode project.properties.mVersionCode
+        versionName project.properties.versionName
     }
     buildTypes {
         release {
@@ -22,5 +24,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile "com.android.support:appcompat-v7:${appCompactVersion}"
+    compile project(':AndroidCommon')
+    compile project(':autolayout_api')
+    apt project(':autolayout_compiler')
+    compile project(':AndroidProcess')
 }
