--- a/LightLocker/app/src/main/AndroidManifest.xml
+++ b/LightLocker/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dhair.lightlocker" >
+    package="com.dhair.light.locker" >
 
     <application
+        android:name=".application.LightLockerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
