--- a/LightLocker/gradle.properties
+++ b/LightLocker/gradle.properties
@@ -16,4 +16,5 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-systemProp.APP_COMPACT_VERSION = 23.3.0
+systemProp.gradleVersion = 1.5.0
+systemProp.hotFixVersion = 1.1.0
