--- a/LightLocker/ext.gradle
+++ b/LightLocker/ext.gradle
@@ -1,5 +1,11 @@
 project.ext {
-    appCompactVersion = '23.3.0'
+    supportVersion = '23.3.0'
+    butterknifeVersion = '8.0.1'
+    rxAndroidVersion = '1.2.0'
+    rxJavaVersion = '1.1.4'
+    gsonVersion = '2.6.2'
+    retrofitVersion = '2.0.2'
+    okhttpVersion = '3.2.0'
     compileSdkVersion = 23
     buildToolsVersion = '23.0.3'
     minSdkVersion = 14
