--- a/LightLocker/ext.gradle
+++ b/LightLocker/ext.gradle
@@ -6,6 +6,7 @@ project.ext {
     gsonVersion = '2.6.2'
     retrofitVersion = '2.0.2'
     okhttpVersion = '3.2.0'
+    leakCanaryVersion = '1.4-beta2'
     compileSdkVersion = 23
     buildToolsVersion = '23.0.3'
     minSdkVersion = 14
