modify the styles

--- a/LightLocker/app/src/main/AndroidManifest.xml
+++ b/LightLocker/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.dhair.light.locker">
+<manifest package="com.dhair.light.locker"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name=".application.LightLockerApplication"
