--- a/AndroidCommon/AndroidCommon/build.gradle
+++ b/AndroidCommon/AndroidCommon/build.gradle
@@ -8,7 +8,7 @@ android {
     defaultConfig {
         minSdkVersion project.properties.minSdkVersion
         targetSdkVersion project.properties.targetSdkVersion
-        versionCode project.properties.mVersionCode
+        versionCode project.properties.versionCode
         versionName project.properties.versionName
     }
     buildTypes {
