--- a/AndroidProcess/AndroidProcess/src/main/AndroidManifest.xml
+++ b/AndroidProcess/AndroidProcess/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="com.library"
+<manifest package="com.android.process.library"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.GET_TASKS"/>
