--- a/AndroidProcess/AndroidProcess/build.gradle
+++ b/AndroidProcess/AndroidProcess/build.gradle
@@ -2,14 +2,14 @@ apply from: 'ext.gradle'
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion project.properties.compileSdkVersion
+    buildToolsVersion project.properties.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion project.properties.minSdkVersion
+        targetSdkVersion project.properties.targetSdkVersion
+        versionCode project.properties.versionCode
+        versionName project.properties.versionName
     }
     buildTypes {
         release {
@@ -21,6 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:${appCompactVersion}"
 }
