--- a/AndroidProcess/AndroidProcess/ext.gradle
+++ b/AndroidProcess/AndroidProcess/ext.gradle
@@ -1,3 +1,9 @@
 project.ext {
     appCompactVersion = '23.3.0'
+    compileSdkVersion = 23
+    buildToolsVersion = '23.0.3'
+    minSdkVersion = 14
+    targetSdkVersion = 23
+    versionCode = 1
+    versionName = '1.0'
 }
