--- a/AndroidUILibrary/AndroidUILibrary/build.gradle
+++ b/AndroidUILibrary/AndroidUILibrary/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         minSdkVersion project.properties.minSdkVersion
         targetSdkVersion project.properties.targetSdkVersion
-        versionCode project.properties.mVersionCode
+        versionCode project.properties.versionCode
         versionName project.properties.versionName
     }
     buildTypes {
