--- a/LightLocker/app/src/main/AndroidManifest.xml
+++ b/LightLocker/app/src/main/AndroidManifest.xml
@@ -9,13 +9,44 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ui.main.MainActivity">
+        <activity
+            android:name="com.dhair.light.locker.ui.entry.EntryActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:noHistory="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data
+                    android:path="/browser"
+                    android:scheme="${applicationId}"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="${applicationId}.third.party.entry"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.dhair.light.locker.ui.splash.SplashActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar.FullScreen"/>
+        <!--android:theme="@style/AppTheme.NoActionBar.TranslucentBackground"-->
+        <activity
+            android:name="com.dhair.light.locker.ui.home.HomeActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"/>
 
         <provider
             android:name="com.dhair.light.locker.component.cp.UContentProvider"
