--- a/AndroidUILibrary/ext.gradle
+++ b/AndroidUILibrary/ext.gradle
@@ -1,5 +1,5 @@
 project.ext {
-    appCompactVersion = '23.3.0'
+    supportVersion = '23.3.0'
     compileSdkVersion = 23
     buildToolsVersion = '23.0.3'
     minSdkVersion = 14
