--- a/LightLocker/gradle.properties
+++ b/LightLocker/gradle.properties
@@ -16,5 +16,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-systemProp.gradleVersion = 1.3.1
+rg.gradle.jvmargs=-Xmx2048M
+systemProp.gradleVersion = 2.1.0
 systemProp.hotFixVersion = 1.1.0
